<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    tools:context="me.joshvocal.inventory_app.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Supplier category -->
        <LinearLayout
            android:id="@+id/container_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_image" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Image -->
                <ImageView
                    android:id="@+id/edit_product_image"
                    android:layout_width="match_parent"
                    android:layout_height="225dp"
                    android:background="@color/colorDarkGray"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </LinearLayout>

        <!-- Overview category -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/EditorFieldStyle"
                    android:gravity="center"
                    android:hint="@string/hint_product_name"
                    android:inputType="textCapWords" />

                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:gravity="center"
                    android:hint="@string/hint_product_price"
                    android:inputType="numberDecimal" />

                <!-- Quantity Available -->
                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/EditorFieldStyle"
                    android:gravity="center"
                    android:hint="@string/hint_product_quantity"
                    android:inputType="number" />

            </LinearLayout>
        </LinearLayout>

        <!-- Supplier category -->
        <LinearLayout
            android:id="@+id/container_supplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_supplier" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Quantity Available -->
                <EditText
                    android:id="@+id/edit_product_email"
                    style="@style/EditorFieldStyle"
                    android:gravity="center"
                    android:hint="@string/hint_product_email"
                    android:inputType="textEmailAddress" />

            </LinearLayout>
        </LinearLayout>

        <!-- Change quantity category -->
        <LinearLayout
            android:id="@+id/container_change_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:id="@+id/text_change_quantity"
                style="@style/CategoryStyle"
                android:text="Change Quantity" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_track_sale"
                    style="@style/EditorFieldStyle"
                    android:gravity="center"
                    android:hint="Track Sale"/>

                <Button
                    android:id="@+id/button_receive_shipment"
                    style="@style/EditorFieldStyle"
                    android:gravity="center"
                    android:hint="Receive Shipment"/>

            </LinearLayout>
        </LinearLayout>

        <!-- Email Action category -->
        <LinearLayout
            android:id="@+id/container_email_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                android:id="@+id/text_email_action"
                style="@style/CategoryStyle"
                android:text="Email Action" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_order_supplier"
                    style="@style/EditorFieldStyle"
                    android:gravity="center"
                    android:hint="Order from Supplier"/>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
